# homebus

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  cli.c  homebusd.c  homebusd.h  homebusd_event.c  homebusd_id.c  homebusd_proto.c  homebusmsg.h  libhomebus-internal.h  libhomebus-obj.c  libhomebus-req.c  libhomebus.h  libubus-acl.c  libubus-io.c  libubus-sub.c  libubus.c  ubus_common.h  ubusd_acl.c  ubusd_acl.h  ubusd_id.h  ubusd_main.c  ubusd_monitor.c  ubusd_obj.c  ubusd_obj.h
examples/: CMakeLists.txt  client.c  server.c
lua/: CMakeLists.txt  homebus.c  publisher.lua  subscriber.lua  test.lua  test_client.lua
tests/cram/: CMakeLists.txt  test_homebus.t  test_ubusd.t
tests/fuzz/: CMakeLists.txt  test-fuzz.c
